styles/globals.css
@layer {
  [data-nextjs-scroll-focus-boundary] {
    display: contents;
  }
}

body {
  padding: 0;
  margin: 0;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

img {
  filter: none;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
  -webkit-backface-visibility: hidden;
  -ms-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-filter: blur(0px);
  -moz-filter: blur(0px);
  -ms-filter: blur(0px);
}

.main {
  min-height: 100vh;
}

.cloudWrapper {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.cloudContainer {
  position: absolute;
  margin: 0 auto;
  width: 100%;
  max-width: 1000px;
  height: 100%;
  opacity: .5;
  z-index: -1;
}

.cloudInner {
  display: flex;
  flex-flow: column;
  height: 100%;
  padding-top: 100px;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
}

@-webkit-keyframes animateCloud {
	0% { margin-left: 1000px; opacity: 0; }
  10% { opacity: 1 }
  90% { opacity: 1 }
	100% { margin-left: -500px; opacity: 0; }
}

@-moz-keyframes animateCloud {
	0% { margin-left: 1000px; opacity: 0; }
  10% { opacity: 1 }
  90% { opacity: 1 }
	100% { margin-left: -500px; opacity: 0; }
}

@keyframes animateCloud {
	0% { margin-left: 1000px; opacity: 0; }
  10% { opacity: 1 }
  90% { opacity: 1 }
	100% { margin-left: -500px; opacity: 0; }
}

.x1 {
  opacity: 0;
	-webkit-animation: animateCloud 8s linear infinite;
	-moz-animation: animateCloud 8s linear infinite;
	animation: animateCloud 8s linear infinite;
	-webkit-transform: scale(0.75);
	-moz-transform: scale(0.75);
	transform: scale(0.75);
}

.x2 {
  opacity: 0;
	-webkit-animation: animateCloud 14s linear infinite;
	-moz-animation: animateCloud 14s linear infinite;
	animation: animateCloud 14s linear infinite;
	-webkit-transform: scale(0.5);
	-moz-transform: scale(0.5);
	transform: scale(0.5);
}

.x3 {
  opacity: 0;
	-webkit-animation: animateCloud 20s linear infinite;
	-moz-animation: animateCloud 20s linear infinite;
	animation: animateCloud 20s linear infinite;
	-webkit-transform: scale(0.25);
	-moz-transform: scale(0.25);
	transform: scale(0.25);
}

.xPad500 {
  margin-right: 500px
}
.xPad750 {
  margin-right: 750px
}
.xPad1000 {
  margin-right: 1000px
}


.cloud {
	background: #fff;
	-webkit-border-radius: 50px;
	-moz-border-radius: 50px;
	border-radius: 50px;

	height: 60px;
	position: relative;
	width: 200px;
  transition: all 300ms ease-in-out;
}

.cloud:after, .cloud:before {
  background: #fff;
	content: '';
	position: absolute;
	z-indeX: -1;
}

.cloud:after {
	-webkit-border-radius: 50px;
	-moz-border-radius: 50px;
	border-radius: 50px;
	height: 50px;
	left: 25px;
	top: -25px;
	width: 50px;
}

.cloud:before {
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;
	width: 90px;
	height: 90px;
	right: 25px;
	top: -45px;
}

